<resources>
    <string name="app_name">EMarket POS</string>
    <string name="title_bar">ELECTRONIC MARKET SYSTEM</string>
    <string name="lblUsername">Username</string>
    <string name="lblPassword">Password</string>
    <string name="lblBtnLogin">LOGIN</string>
    <string name="logoDesc">SPC Logo</string>
    <string name="toolbarTitleMenu">CHOOSE TRANSACTION</string>
    <string name="lblAmb">AMBULANT COLLECTION</string>
    <string name="lblStall">STALL COLLECTION</string>
    <string name="lblName">Firstname Lastname</string>
    <string name="userIcon">user_icon</string>
    <string name="stallCol">STALL COLLECTION</string>
    <string name="ambCol">AMBULANT COLLECTION</string>
    <string name="btnPrintRec">PRINT RECEIPT</string>
    <string name="lblOwnerName">Name:</string>
    <string name="lblNatBus">Nature of Business:</string>
    <string name="lblAmt">Amount to pay:</string>
    <string name="lblStallNo">Stall number:</string>
    <string name="lblStallOwn">Name of Owner:</string>
    <string name="lblStallBusName">Business Name:</string>
    <string name="lblAmbList">Ambulant Search</string>
    <string name="lblStallList">Stall Search</string>
    <string name="hintSearch">Search</string>
    <string name="hintSearchAmbulant">Search by Name</string>
    <string name="hintSearchStall">Search by Stall No.</string>
    <string name="btnSearch">Search</string>
    <string name="btnProceed">Proceed</string>
    <string name="btnResetSearch">Reset</string>
    <string name="chkCon">Establishing connection&#8230;</string>
    <string name="noConWarn">No Connection</string>
    <string name="SetIPlbl">Set IP Address to access market database</string>
    <string name="IPSample">e.g. 192.168.1.1</string>
    <string name="lblSaveSet">Save Settings</string>
    <string name="tryAgain"><a>Try Again</a></string>
    <string name="btnCreateAcct">Create new account</string>
    <string name="regUserLbl">Register new account</string>
    <string name="fnameLbl">First Name</string>
    <string name="mnameLbl">Middle Name</string>
    <string name="lnameLbl">Last Name</string>
    <string name="addrLbl">Address</string>
    <string name="contactLbl">Contact no.</string>
    <string name="btnRegLbl">Register</string>
    <string name="lblRegUser">REGISTER USER</string>
    <item name="visible" type="id" />
    <item name="masked" type="id" />

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
